added UI like gpt

--- a/localTrials/isit.html
+++ b/localTrials/isit.html
@@ -12,7 +12,7 @@
     <h1 style="font-family: 'Times New Roman', Times, serif;">Rex basic UI</h1>
 
     <!-- View old chat sessions button and container -->
-    <button onclick="viewOldChatSessions()">View Old Chat Sessions</button>
+    <button class="btnSess" onclick="viewOldChatSessions()">View Old Chat Sessions</button>
     <div class="old-sessions" id="oldSessions"></div>
 
     <div class="container">
