--- a/localTrials/demo.html
+++ b/localTrials/demo.html
@@ -45,8 +45,8 @@
         </div>
         <div class="border content-area">
             <div class="new-chat border" id='logo'>
-                <img src="https://freepnglogo.com/images/all_img/1700403115chatgpt-logo-transparent.png" alt="logo">
-                <!-- <img src="Frame_1321316226.png" alt="Rex AI is here for you <3"> -->
+                <!-- <img src="https://freepnglogo.com/images/all_img/1700403115chatgpt-logo-transparent.png" alt="logo"> -->
+                <img src="Frame_1321316226.png" alt="logo">
                 <h2>How can I help you today?</h2>
             </div>
             <div class='border' id="chat-container">
