--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Chatbot</title>
+    <title>Rex</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
         <div class="user-input">
             <input type="text" id="userMessage" placeholder="Type your message...">
             <button onclick="sendMessage()">Send</button>
-            <button id="startSpeechRecognition">Start Speech Recognition</button>
+            <button id="startSpeechRecognition"> Speek </button>
         </div>
     </div>
 
